# vireon-trp-mip-crucible

./: LICENSE  README.md  Run on PC directions  pyproject.toml
.github/workflows/: ci.yml
docs/: README_experiments.md  api_overview.md  claims_and_limits.md  crucible_spec.md  math_foundations.md  math_spec.md  theorems_kl_leash.md  toy_search_results.md
scripts/: analyze_toy.py  run_invariant_demo.py  run_toy_baseline.py  run_toy_readme.py  run_toy_stats.py  run_toy_vireon.py
src/vireon_trp_mip/: __init__.py  collapse_laws.py  config.py  controller.py  distributions.py  kl_leash.py  logging_utils.py  toy_solver.py  trp_state.py
src/vireon_trp_mip/mip/: __init__.py  abstract_solver.py
tests/: test_kl_leash.py  test_math_invariants.py  test_toy_solver.py  test_trp_state.py
